@@ -1,4 +1,12 @@
 
+2016-11-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* tree.h: added cb_field->validation (First level 88 field, if any)
+	* field.c (cb_build_field_tree): add validation entry and sisters
+	* cobc.c (print_88_values, xref_88_values): use new validation entries
+	  instead of checking all word references against the field
+	  (huge! time saver and correct order)
+
 2016-11-09  Dave Pitts <dpitts@cozx.com>
 
 	* cobc.c, cobc.h, parser.y, tree.h, typeck.c: Added internal cross
@@ -9,19 +17,19 @@
 	* cobc.c (print_88_values): Added to print 88 level values.
 	(print_fields): call print_88_values for a variable.
 
-2015-11-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+2016-11-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* cobc/cobc.c (print_program_header): changed the version string limit
 	  (including patchlevel) to 14 digits
 
-2015-11-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+2016-11-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* parser.y (terminator_warning, terminator_error, terminator_clear):
 	  COBC_ABORT for invalid calls, warn/error with current_statement and
 	  only free stmt when it is valid (currently isn't the case when an alias
 	  for a statement is used)
 
-2015-11-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+2016-11-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* config.c (read_string): fixing changes to pointer generated by
 	  cobc_main_malloc (needs to stay for later cobc_main_free)
